--- a/src/pages/sign-up/sign-up-user-onboarding/components/Bio/bio.module.scss
+++ b/src/pages/sign-up/sign-up-user-onboarding/components/Bio/bio.module.scss
@@ -21,7 +21,7 @@
   }
 }
 .counter {
-  color: var(--color-gray-light-1);
+  color: var(--color-gray-dark-01);
   margin-top: 4px;
   font-size: 14px;
 }
