--- a/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
@@ -10,12 +10,25 @@
   border: 0.75px solid $color-grey-900;
   opacity: 0.08;
   background-color: $color-grey-200;
+  margin-top: 24px;
 }
-
-
 
 .uploadBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  align-self: stretch;
+  border-radius: 12px;
+  border: 1px solid $color-grey-200;
+  padding: 24px 16px;
+  margin-top: 20px;
 }
-.uploadLogoContainer{
-
+.uploadText {
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: $color-grey-600;
 }
