--- a/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
@@ -24,11 +24,21 @@
   padding: 24px 16px;
   margin-top: 20px;
 }
-.uploadText {
-  font-family: Inter;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-  color: $color-grey-600;
+
+.header {
+  .title {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+  .description {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: $color-grey-600;
+  }
 }
