--- a/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
@@ -42,3 +42,21 @@
     color: $color-grey-600;
   }
 }
+
+.counter {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: $color-grey-600;
+  margin-top: 8px;
+}
+.uploadButton {
+  border-color: $color-grey-300;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
