--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationLogo/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationLogo/image-bio.module.scss
@@ -32,6 +32,7 @@
     line-height: 28px;
     letter-spacing: 0em;
     text-align: center;
+    color: $color-grey-900;
   }
   .description {
     font-size: 16px;
