--- a/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
@@ -60,3 +60,9 @@
   flex-direction: row;
   justify-content: center;
 }
+
+@media screen and (max-width: 600px) {
+  .footer {
+    border-top: 1px solid $color-grey-200;
+  }
+}
