--- a/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
@@ -61,6 +61,22 @@
   justify-content: center;
 }
 
+.uploadContainer {
+  border: 1px solid $color-grey-200;
+  border-radius: 12px;
+  padding: 16px 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+  margin-top: 20px;
+  cursor: pointer;
+
+  .uploadDetailText {
+    color: $color-grey-600;
+    font-weight: 400;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .footer {
     border-top: 1px solid $color-grey-200;
