--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationLogo/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationLogo/image-bio.module.scss
@@ -55,11 +55,28 @@
   color: $color-grey-600;
   margin-top: 8px;
 }
+
 .uploadButton {
   border-color: $color-grey-300;
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.uploadContainer {
+  border: 1px solid $color-grey-200;
+  border-radius: 12px;
+  padding: 16px 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+  margin-top: 20px;
+  cursor: pointer;
+
+  .uploadDetailText {
+    color: $color-grey-600;
+    font-weight: 400;
+  }
 }
 
 @media screen and (max-width: 600px) {
