--- a/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
@@ -82,3 +82,11 @@
     border-top: 1px solid $color-grey-200;
   }
 }
+
+.uploadText {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  color: $color-grey-600;
+}
