--- a/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/ImageBio/image-bio.module.scss
@@ -96,3 +96,10 @@
   line-height: 20px;
   color: $color-primary-700;
 }
+.uploadError {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: $color-error-500;
+}
