--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationLogo/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationLogo/image-bio.module.scss
@@ -76,6 +76,7 @@
   .uploadDetailText {
     color: $color-grey-600;
     font-weight: 400;
+    font-size: 12px;
   }
   .uploadText {
     font-size: 14px;
