--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationLogo/image-bio.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationLogo/image-bio.module.scss
@@ -54,6 +54,9 @@
   line-height: 20px;
   color: $color-grey-600;
   margin-top: 8px;
+  @media screen and (max-width: 600px) {
+    margin-bottom: 120px;
+  }
 }
 
 .uploadButton {
@@ -95,6 +98,7 @@
 }
 @media screen and (max-width: 600px) {
   .footer {
+    background-color: white;
     border-top: 1px solid $color-grey-200;
   }
 }
